feat: added react frontend as well